@@ -186,7 +186,8 @@ public abstract class LuceneTestCase extends TestCase {
     LuceneTestCaseJ4.removeTestCodecs(codec);
     Locale.setDefault(savedLocale);
     TimeZone.setDefault(savedTimeZone);
-    
+    System.clearProperty("solr.solr.home");
+    System.clearProperty("solr.data.dir");
     try {
       Thread.setDefaultUncaughtExceptionHandler(savedUncaughtExceptionHandler);
       if (!uncaughtExceptions.isEmpty()) {
