@@ -158,6 +158,7 @@
            failureProperty="tests.failed"
            dir="src/test/resources/"
            tempdir="${tempDir}"
+           forkmode="perBatch"
            >
       <sysproperty key="java.util.logging.config.file" value="${common-solr.dir}/testlogging.properties"/>
       <sysproperty key="tests.luceneMatchVersion" value="${tests.luceneMatchVersion}"/>
@@ -214,6 +215,7 @@
            failureProperty="tests.failed"
            dir="src/extras/test/resources/"
            tempdir="${tempDir}"
+           forkmode="perBatch"
            >
       <sysproperty key="java.util.logging.config.file" value="${common-solr.dir}/testlogging.properties"/>
       <sysproperty key="tests.luceneMatchVersion" value="${tests.luceneMatchVersion}"/>
